--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,10 @@
-<h1><%= @user.name %></h1>
-<p>Email: <%= @user.email %></p>
+<% provide(:title, 'All users') %>
+<h1>All users</h1>
+<ul class="users">
+  <% @users.each do |user| %>
+    <li>
+      <%= gravatar_for user, size: 50 %>
+      <%= link_to user.name, user %>
+    </li>
+  <% end %>
+</ul>
